[Fix] Fix compiler-issued errors and warnings